@@ -207,8 +207,17 @@ sub orphans : Chained('_set_wiki') : PathPart('orphans') : Args(0) {
 
     my $wiki = $c->stash()->{wiki};
 
-    $c->stash()->{orphan_count} = $wiki->orphaned_page_count();
-    $c->stash()->{orphans} = $wiki->orphaned_pages();
+    my $count = $wiki->orphaned_page_count();
+
+    my ( $limit, $offset ) = $self->_make_pager( $c, $count );
+
+    $c->stash()->{orphan_count} = $count;
+    $c->stash()->{orphans}      = $wiki->orphaned_pages(
+        limit  => $limit,
+        offset => $offset,
+    );
+
+    $c->stash()->{template} = '/wiki/orphans';
 }
 
 sub wanted : Chained('_set_wiki') : PathPart('wanted') : Args(0) {
@@ -217,8 +226,17 @@ sub wanted : Chained('_set_wiki') : PathPart('wanted') : Args(0) {
 
     my $wiki = $c->stash()->{wiki};
 
-    $c->stash()->{wanted_count} = $wiki->wanted_page_count();
-    $c->stash()->{wanted} = $wiki->wanted_pages();
+    my $count = $wiki->wanted_page_count();
+
+    my ( $limit, $offset ) = $self->_make_pager( $c, $count );
+
+    $c->stash()->{wanted_count} = $count;
+    $c->stash()->{wanted}       = $wiki->wanted_pages(
+        limit  => $limit,
+        offset => $offset,
+    );
+
+    $c->stash()->{template} = '/wiki/wanted';
 }
 
 sub settings : Chained('_set_wiki') : PathPart('settings') : Args(0) {
